fixed scrollbar

--- a/frontend/src/panels/Group/Group.css
+++ b/frontend/src/panels/Group/Group.css
@@ -3,8 +3,8 @@
     scrollbar-color: dark;
 }
 #friends-gallery::-webkit-scrollbar {
-    width: 30px;
-    height: 5px;
+    width: 5px;
+    height: 30px;
 }
 #friends-gallery::-webkit-scrollbar-thumb {
     background: #3e7cb0;
